# socket-python-cli

./: .gitignore  .gitlab-ci-test.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  GITLAB_TESTING_GUIDE.md  Makefile  Pipfile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  session.md  socket.yml  test-gitlab-integration.sh  test.py
.github/: CODEOWNERS  dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: bug-fix.md  feature.md  improvement.md
.github/actions/setup-docker/: action.yml
.github/actions/setup-docker-publish/: action.yml
.github/actions/setup-sfw/: action.yml
.github/workflows/: dependabot-review.yml  dependency-review.yml  docker-stable.yml  e2e-test.yml  pr-preview.yml  python-tests.yml  release.yml  reusable-cli-compat.yml  sdk-nightly-compat.yml  version-check.yml
.hooks/: sync_version.py  sync_versions.py
docs/: README.md  ci-cd.md  cli-reference.md  development.md  troubleshooting.md
examples/config/: sarif-dashboard-parity.json  sarif-dashboard-parity.toml  sarif-diff-ci-cd.json  sarif-diff-ci-cd.toml  sarif-instance-detail.json  sarif-instance-detail.toml
instructions/ci-templates/: README.md  cli-compat-on-sdk-pr.yml  sdk-python-tests.yml
instructions/gitlab-commit-status/: uat.md
scripts/: build_container.sh  build_container_flexible.sh  deploy-test-docker.sh  deploy-test-pypi.sh  docker-entrypoint.sh  run.sh
socketsecurity/: __init__.py  config.py  fossa_compat.py  output.py  socketcli.py
socketsecurity/core/: __init__.py  alert_selection.py  classes.py  cli_client.py  cli_run.py  config.py  exceptions.py  git_interface.py  github.py  gitlab.py  lazy_file_loader.py  log_uploader.py  logging.py  messages.py  old-core-init.py  resource_utils.py  scm_comments.py  socket_config.py  streaming.py  utils.py
socketsecurity/core/helper/: __init__.py  socket_facts_loader.py
socketsecurity/core/scm/: base.py  bitbucket.py  client.py  github.py  gitlab.py
socketsecurity/core/tools/: reachability.py
socketsecurity/plugins/: base.py  jira.py  manager.py  slack.py  teams.py  webhook.py
socketsecurity/plugins/formatters/: __init__.py  slack.py
test/: requirements.txt
tests/core/: conftest.py  create_diff_input.json  test_diff_alerts.py  test_diff_generation.py  test_facts_compression.py  test_git_interface.py  test_has_manifest_files.py  test_package_and_alerts.py  test_sdk_methods.py  test_supporting_methods.py
tests/core/scm/: test_github.py
tests/data/fullscans/: create_response.json
tests/data/fullscans/diff/: stream_diff.json  stream_diff_full.json
tests/data/fullscans/head_scan/: metadata.json  stream_scan.json
tests/data/fullscans/new_scan/: metadata.json  stream_scan.json
tests/data/repos/: repo_info_error.json  repo_info_no_head.json  repo_info_success.json
tests/data/settings/: security-policy.json
tests/e2e/: validate-gitlab.sh  validate-json.sh  validate-reachability.sh  validate-sarif.sh  validate-scan.sh
tests/e2e/fixtures/simple-npm/: index.js  package.json
tests/e2e/fixtures/simple-pypi/: requirements.txt
tests/fixtures/fossa/: README.md  fossa-analyze-empty.json  fossa-analyze-populated.json  fossa-sbom-empty-deep.json  fossa-sbom-populated.json
tests/unit/: __init__.py  test_alert_selection.py  test_bitbucket.py  test_cli_config.py  test_cli_run.py  test_client.py  test_config.py  test_core.py  test_core_instance.py  test_core_new.py  test_dependency_overview.py  test_disable_ignore.py  test_exclude_paths.py  test_fossa_compat.py  test_fossa_parity.py  test_full_scan_retry.py  test_gitlab_auth.py  test_gitlab_auth_fallback.py  test_gitlab_commit_status.py  test_gitlab_format.py  test_ignore_telemetry_filtering.py  test_include_dirs.py  test_log_uploader.py  test_output.py  test_reachability.py  test_slack_plugin.py  test_socketcli.py  test_socketcli_workspace.py  test_streaming.py  test_tier1_finalize.py  test_utils.py
workflows/: bitbucket-pipelines.yml  buildkite.yml  github-actions.yml  gitlab-ci.yml
